--- a/src/welcome.html
+++ b/src/welcome.html
@@ -1,21 +1,19 @@
 <html>
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-		<link rel="stylesheet" type="text/css" href="css/welcome.css" />
-		<title>welcome</title>
-	</head>
-	<body>
-		<div id="title-block">
-			<div id="title"><img src="icons/128.png" /> Learn Helper </div>
-			<small> 致力于帮助你及时了解网络学堂的信息 </small>
-		</div>
-		<div id="menu">
-			<li><a href="readme.html">使用手册</a></li>
-			<li><a href="about.html#about-us">关于我们</a></li>
-		</div>
-		<div id="footer">
-			&copy; 2012 <a href="mailto:xxr3376@gmail.com">UGeeker</a> BrainLi
-		</div>
-	</body>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <link rel="stylesheet" type="text/css" href="css/welcome.css" />
+    <title>welcome</title>
+  </head>
+  <body>
+    <div id="wrapper">
+      <div id="menu">
+        <a href="readme.html">使用手册</a> |
+        <a href="about.html#about-us">关于我们</a>
+      </div>
+      <div id="footer">
+        &copy; 2013 <a href="mailto:xxr3376@gmail.com">UGeeker</a> BrianLi
+      </div>
+    </div>
+  </body>
 </html>
 
