--- a/src/about.html
+++ b/src/about.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <link rel="stylesheet" type="text/css" href="css/doc.css" />
 		<title>关于</title>
 	</head>
 	<body>
@@ -11,11 +12,13 @@
 			<p>其实有人建议我做一个功能叫：今天有没交的作业的时候，自动屏蔽人人和微博。其实这个功能很简单啦，不过其实还是要靠自己的，我还是不要这样子做了（括弧笑）。如果你有神马建议都欢迎告诉我~</p>
 			<p> 联系我：<br /> xxr3376@gmail.com，无论有什么问题或是建议，欢迎联系我~ </p>
 			<p> 致谢：
-				<li> 李百恩：无敌的技术支持以及最好的美工 </li>
-				<li> 贵系老师：繁多的作业催生了这个插件的产生 </li>
-				<li> Bootstrap &amp; FontAwesome：清新漂亮的界面 </li>
-				<li> JQuery库：减轻了操作DOM的工作复杂度 </li>
-				<li> Github：管理代码 </li>
+        <ul>
+          <li> 李百恩：无敌的技术支持以及最好的美工 </li>
+          <li> 贵系老师：繁多的作业催生了这个插件的产生 </li>
+          <li> Bootstrap &amp; FontAwesome：清新漂亮的界面 </li>
+          <li> JQuery库：减轻了操作DOM的工作复杂度 </li>
+          <li> Github：管理代码 </li>
+        </ul>
 			</p>
 		</div>
 	</body>
