--- a/src/index.html
+++ b/src/index.html
@@ -91,7 +91,7 @@
 
 		</div>
 		<div class="pane-content">
-			<iframe src="welcome.html" name="content-frame" frameborder="0" width="100%" height="100%"></iframe>
+			<iframe src="welcome.html" name="content-frame" frameborder="0" width="100%" height="100%" style="display:block"></iframe>
 		</div>
 
 		<div id="token-modal">
