--- a/src/readme.html
+++ b/src/readme.html
@@ -1,7 +1,8 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-		<link rel="stylesheet" type="text/css" href="css/Clearness.css" />
+		<!-- <link rel="stylesheet" type="text/css" href="css/Clearness.css" /> -->
+    <link rel="stylesheet" type="text/css" href="css/doc.css" />
 		<title>welcome</title>
 	</head>
 	<body>
