--- a/src/readme.html
+++ b/src/readme.html
@@ -3,37 +3,76 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 		<!-- <link rel="stylesheet" type="text/css" href="css/Clearness.css" /> -->
     <link rel="stylesheet" type="text/css" href="css/doc.css" />
-		<title>welcome</title>
+		<title>Welcome</title>
 	</head>
 	<body>
+    <div class="wrapper">
+      <!--
+      <div class="text-block">
 
-		<h1 id="toc_1">欢迎使用 网络学堂改造器</h1>
+        <h1 id="toc_1">欢迎使用 网络学堂改造器</h1>
 
-		<h2 id="toc_1.1">功能介绍</h2>
-		<ul>
-			<li> 无需手动登陆网络学堂，一键登入
-			<li> 作业、通知的主界面 
-			<li> 修复了网络学堂作业页面的排版错误
-			<li> 其他的还在做~
-		</ul>
+        <h2 id="toc_1.1">功能介绍</h2>
+        <ul>
+          <li> 无需手动登陆网络学堂，一键登入
+          <li> 作业、通知的主界面 
+          <li> 修复了网络学堂作业页面的排版错误
+          <li> 其他的还在做~
+        </ul>
 
-		<h2 id="toc_1.2">使用手册</h2>
-		<p>
-		初次使用请用登陆网络学堂的用户名和密码登陆。 
-		图示：  
-		</p>
-		<ul>
-			<li> 这是作业项的示意图，根据剩余天数的不同会有不同的颜色。
-			<ul>
-				<li> 0~2天：红色
-				<li> 3~5天：橙色
-				<li> 大于5天：蓝色
-			</ul>
-			<li> 这是已经提交的作业的样子，对勾表示已经不用再考虑它了~
-			<li> 注意多出了尚未批阅的字样，当作业被老师批阅了之后，这里就会出现批阅的链接了~ 
-			<li> 这是已经过了提交日期的作业，灰色的标告诉你想也没有用了。。。
-			<li> 这里也有批阅的提示。
-			<li> 这个是通知的例子，红色的点表示被置顶了。如果是蓝色就表示是未读的。
-		</ul>
+        <h2 id="toc_1.2">使用手册</h2>
+        <p>
+        初次使用请用登陆网络学堂的用户名和密码登陆。 
+        图示：  
+        </p>
+        <ul>
+          <li> 这是作业项的示意图，根据剩余天数的不同会有不同的颜色。</li>
+          <ul>
+            <li> 0~2天：红色</li>
+            <li> 3~5天：橙色</li>
+            <li> 大于5天：蓝色</li>
+          </ul>
+          <li> 注意多出了尚未批阅的字样，当作业被老师批阅了之后，这里就会出现批阅的链接了~ </li>
+          <li> 这里也有批阅的提示。</li>
+          <li> 这个是通知的例子，红色的点表示被置顶了。如果是蓝色就表示是未读的。</li>
+        </ul>
+      </div>
+      -->
+
+      <div class="image-block clearfix">
+        <img src="image/noti.png" />
+        <div class="text">
+          <h2>通知提示</h2>
+          红色的点表示被置顶了。如果是蓝色就表示是未读的。
+        </div>
+      </div>
+
+      <div class="image-block clearfix image-block-right">
+        <img src="image/ddl-std.png" />
+        <div class="text">
+          <h2>作业提示</h2>
+          这是作业项的示意图，根据剩余天数的不同会有不同的颜色。
+        </div>
+      </div>
+
+      <div class="image-block clearfix">
+        <img src="image/ddl-expired.png" />
+        <div class="text">
+          <h2>过期作业</h2>
+          这是已经过了提交日期的作业，灰色的标告诉你想也没有用了。。。
+        </div>
+      </div>
+
+      <div class="image-block clearfix image-block-right">
+        <img src="image/ddl-handin.png" />
+        <div class="text">
+          <h2>已经提交的作业</h2>
+          这是已经提交的作业的样子，对勾表示已经不用再考虑它了~
+        </div>
+      </div>
+
+      <a class="back-link" href="welcome.html">返回</a>
+
+    </div>
 	</body>
 </html>
