--- a/src/welcome.html
+++ b/src/welcome.html
@@ -2,7 +2,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <link rel="stylesheet" type="text/css" href="css/welcome.css" />
-    <title>welcome</title>
+    <title>Welcome</title>
   </head>
   <body>
     <div id="wrapper">
