--- a/src/readme.html
+++ b/src/readme.html
@@ -47,7 +47,7 @@
         </div>
       </div>
 
-      <div class="image-block clearfix image-block-right">
+      <div class="image-block clearfix">
         <img src="image/ddl-std.png" />
         <div class="text">
           <h2>作业提示</h2>
@@ -63,7 +63,7 @@
         </div>
       </div>
 
-      <div class="image-block clearfix image-block-right">
+      <div class="image-block clearfix">
         <img src="image/ddl-expired.png" />
         <div class="text">
           <h2>过期作业</h2>
