--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
 		<!-- <link rel="stylesheet" type="text/css" href="css/Clearness.css" /> -->
     <link rel="stylesheet" type="text/css" href="css/doc.css" />
 		<title> Learn Helper </title>
+    <style type="text/css">
+      .logo-block {
+        background: url(image/bg.png) center center no-repeat;
+        height: 152px;
+        margin-top: 15px;
+        text-align center;
+      }
+    </style>
 	</head>
 	<body>
     <div class="wrapper">
-		<img src="image/bg.png" />
+    <div class="logo-block"></div>
 	  <div class="image-block clearfix">
 		  <div class="text">
 			  这是一个基于清华大学网络学堂的改造项目，以简洁清新的 UI 带来更好的使用体验。<br />
