add version info

--- a/src/welcome.html
+++ b/src/welcome.html
@@ -6,6 +6,11 @@
   </head>
   <body>
     <div id="wrapper">
+		<div id="header">
+			<a href="">
+				Version: <span id="version"> 2.0.1 </span>
+			</a>
+		</div>
       <div id="menu">
         <a href="readme.html">使用手册</a> |
         <a href="about.html#about-us">关于我们</a>
@@ -16,4 +21,3 @@
     </div>
   </body>
 </html>
-
