--- a/src/welcome.html
+++ b/src/welcome.html
@@ -6,18 +6,16 @@
   </head>
   <body>
     <div id="wrapper">
-		<div id="header">
-			<a href="">
-				Version: <span id="version"> 2.0.1 </span>
-			</a>
-		</div>
       <div id="menu">
         <a href="readme.html">使用手册</a> |
         <a href="about.html#about-us">关于我们</a>
+        <div id="version"></div>
       </div>
       <div id="footer">
         &copy; 2013 <a href="mailto:xxr3376@gmail.com">UGeeker</a> BrianLi
       </div>
     </div>
+    <script src="js/utils.js"></script>
+    <script src="js/welcome.js"></script>
   </body>
 </html>
