--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 		<script src="js/modal.js"></script>
 		<script src="js/loading.js"></script>
 		<script src="js/menu.js"></script>
+		<script src="js/utils.js"></script>
 		<script src="ulti.js"></script>
 		<script language="javascript" type="text/javascript" src="total.js"> </script>
 		<script language="javascript" type="text/javascript" src="index.js"> </script>
