--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	  </div>
 	  <div class="image-head clearfix">
 		  <div class="text">效果图：</div>
-			<img src="image/screenshot.png" />
+      <a href="image/screenshot.png" target="_blank"><img src="image/screenshot.png" /></a>
 	  </div>
       <div class="image-block clearfix">
         <img src="image/ddl-new.png" />
