change password save function, add encrypt. version2.0.1

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 		<script src="js/menu.js"></script>
 		<script src="js/utils.js"></script>
 		<script src="ulti.js"></script>
+		<script src="js/sjcl.js"></script>
 		<script language="javascript" type="text/javascript" src="total.js"> </script>
 		<script language="javascript" type="text/javascript" src="index.js"> </script>
 	</head>
