--- a/src/readme.html
+++ b/src/readme.html
@@ -7,79 +7,85 @@
 	</head>
 	<body>
     <div class="wrapper">
-      <div class="image-block clearfix">
-        <img src="image/ddl-new.png" />
-        <div class="text">
-          <h2>新的作业和通知</h2>
-          每当出现新的作业或通知，它就会出现在列表头部。蓝色的点表示未读。
-        </div>
-      </div>
+		<div class="clearfix text-block">
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;最重要的一点，为了能做到自动刷新，我不得不在本地存储你的用户名密码，在2.0.1版本中我对密码进行了加密，
+				但这也只是防君子不防小人，只要能控制你的电脑，无论怎样的技术手段都是无法保护你的密码的TT。
+				你面前的浏览器其实记住了你很多的信息，不光是我的这个插件 &gt;&nbsp;&lt; 。
+				因此请务必注意不要让他人接触到你的电脑以及浏览器，出借电脑时候记得把插件卸载掉吧~ ^_^
+		</div>
+		<div class="image-block clearfix">
+			<img src="image/ddl-new.png" />
+			<div class="text">
+				<h2>新的作业和通知</h2>
+				每当出现新的作业或通知，它就会出现在列表头部。蓝色的点表示未读。
+			</div>
+		</div>
 
-      <div class="image-block clearfix">
-        <img src="image/noti.png" />
-        <div class="text">
-          <h2>通知提示</h2>
-		  通知的符号是紫色的喇叭。
-          红色的点表示被置顶了。
-        </div>
-      </div>
+		<div class="image-block clearfix">
+			<img src="image/noti.png" />
+			<div class="text">
+				<h2>通知提示</h2>
+				通知的符号是紫色的喇叭。
+				红色的点表示被置顶了。
+			</div>
+		</div>
 
-      <div class="image-block clearfix">
-        <img src="image/ddl-std.png" />
-        <div class="text">
-          <h2>作业提示</h2>
-          作业的符号是蓝色的笔，根据剩余天数的不同会有不同的颜色。(红、橙、蓝）
-        </div>
-      </div>
+		<div class="image-block clearfix">
+			<img src="image/ddl-std.png" />
+			<div class="text">
+				<h2>作业提示</h2>
+				作业的符号是蓝色的笔，根据剩余天数的不同会有不同的颜色。(红、橙、蓝）
+			</div>
+		</div>
 
-      <div class="image-block clearfix">
-        <img src="image/ddl-handin.png" />
-        <div class="text">
-          <h2>已经提交的作业</h2>
-          已经提交的作业是绿色的对勾，表示已经不用再考虑它了~
-        </div>
-      </div>
+		<div class="image-block clearfix">
+			<img src="image/ddl-handin.png" />
+			<div class="text">
+				<h2>已经提交的作业</h2>
+				已经提交的作业是绿色的对勾，表示已经不用再考虑它了~
+			</div>
+		</div>
 
-      <div class="image-block clearfix">
-        <img src="image/ddl-expired.png" />
-        <div class="text">
-          <h2>过期作业</h2>
-          过了提交日期的作业是灰色的对勾或笔，灰色告诉你想也没有用了。。。
-        </div>
-      </div>
+		<div class="image-block clearfix">
+			<img src="image/ddl-expired.png" />
+			<div class="text">
+				<h2>过期作业</h2>
+				过了提交日期的作业是灰色的对勾或笔，灰色告诉你想也没有用了。。。
+			</div>
+		</div>
 
-      <div class="image-block clearfix">
-        <img src="image/switch-page.png" />
-        <div class="text">
-          <h2>切换面板</h2>
-          在左上角可以切换 主页、作业、通知 三个面板。
-        </div>
-      </div>
-      <div class="image-block clearfix">
-        <img src="image/course-detail.png" />
-        <div class="text">
-          <h2>课程页面</h2>
-          点击左侧课程名字，可以展开该课的各页面链接，方便快速进入。
-        </div>
-      </div>
-      <div class="image-block clearfix">
-        <img src="image/option-exception.png" />
-        <div class="text">
-          <h2>无视课程</h2>
-		  有些课程有着刷屏的能力，通过添加忽略项来
-		  屏蔽掉这些课程的通知和作业。
-        </div>
-      </div>
-      <div class="image-block clearfix">
-        <img src="image/option-clear.png" />
-        <div class="text">
-          <h2>清空缓存</h2>
-		  这是最后的了，如果你退课了、选新课了、进入新学期了，麻烦手动
-		  清空一下缓存。
-        </div>
-      </div>
-      <a class="back-link" href="welcome.html">返回</a>
+		<div class="image-block clearfix">
+			<img src="image/switch-page.png" />
+			<div class="text">
+				<h2>切换面板</h2>
+				在左上角可以切换 主页、作业、通知 三个面板。
+			</div>
+		</div>
+		<div class="image-block clearfix">
+			<img src="image/course-detail.png" />
+			<div class="text">
+				<h2>课程页面</h2>
+				点击左侧课程名字，可以展开该课的各页面链接，方便快速进入。
+			</div>
+		</div>
+		<div class="image-block clearfix">
+			<img src="image/option-exception.png" />
+			<div class="text">
+				<h2>无视课程</h2>
+				有些课程有着刷屏的能力，通过添加忽略项来
+				屏蔽掉这些课程的通知和作业。
+			</div>
+		</div>
+		<div class="image-block clearfix">
+			<img src="image/option-clear.png" />
+			<div class="text">
+				<h2>清空缓存</h2>
+				这是最后的了，如果你退课了、选新课了、进入新学期了，麻烦手动
+				清空一下缓存。
+			</div>
+		</div>
+		<a class="back-link" href="welcome.html">返回</a>
 
-    </div>
-	</body>
+	</div>
+</body>
 </html>
