add file gui updater

--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,12 @@
 					<span class="unread-count" id="unread-notification">-</span>
 				</a>
 				</li>
+				<li class="folder" id="switch-file-page">
+				<a href="#">
+					<i class="icon-bullhorn"></i> 所有文件
+					<span class="unread-count" id="unread-file">-</span>
+				</a>
+				</li>
 			</ul>
 
 
@@ -90,6 +96,13 @@
 					<li class="message-loading">Loading...</li>
 				</ol>
 			</div>
+			<div id="file-page">
+				<div class="category-heading">全部文件</div>
+				<ol id="file-heading" class="message-list">
+					<li class="message-loading">Loading...</li>
+				</ol>
+			</div>
+			
 
 		</div>
 		<div class="pane-content">
