add magenta tag

--- a/design/index.html
+++ b/design/index.html
@@ -79,6 +79,7 @@
       <li class="message">
         <a class="title" target="_blank" href="http://learn.tsinghua.edu.cn/MultiLanguage/lesson/student/hom_wk_detail.jsp?id=486643&amp;course_id=97913">
           <span class="tag theme-red"><i class="icon-pencil"></i> 365</span>
+          <span class="tag theme-magenta"><i class="icon-pencil"></i> 365</span>
           <span class="tag theme-orange"><i class="icon-pencil"></i> 365</span>
           <span class="tag theme-green"><i class="icon-pencil"></i> 365</span>
           <span class="tag theme-yellow"><i class="icon-pencil"></i> 365</span>
@@ -146,7 +147,7 @@
       closable: true
     });
     setTimeout(function() {
-      $('#my-modal').modal('show');
+      // $('#my-modal').modal('show');
     }, 1000)
     var x = -Math.random();
     var y = -Math.random();
