fix file bug, add file exception, change readme, add changelog.html, change version to 2.1

--- a/src/readme.html
+++ b/src/readme.html
@@ -58,7 +58,7 @@
 			<img src="image/switch-page.png" />
 			<div class="text">
 				<h2>切换面板</h2>
-				在左上角可以切换 主页、作业、通知 三个面板。
+				在左上角可以切换 主页、作业、通知、文件 四个面板。
 			</div>
 		</div>
 		<div class="image-block clearfix">
