--- a/src/welcome.html
+++ b/src/welcome.html
@@ -8,7 +8,8 @@
     <div id="wrapper">
       <div id="menu">
         <a href="readme.html">使用手册</a> |
-        <a href="about.html#about-us">关于我们</a>
+        <a href="about.html#about-us">关于我们</a> | 
+        <a href="changelog.html">Changelog</a>
         <div id="version"></div>
       </div>
       <div id="footer">
