add file to readme

--- a/src/readme.html
+++ b/src/readme.html
@@ -55,6 +55,14 @@
 		</div>
 
 		<div class="image-block clearfix">
+			<img src="image/file.png" />
+			<div class="text">
+				<h2>课程文件</h2>
+				课程文件如图所示，点击标题即可下载。若不想下载可点击设为已读即可。
+			</div>
+		</div>
+
+		<div class="image-block clearfix">
 			<img src="image/switch-page.png" />
 			<div class="text">
 				<h2>切换面板</h2>
