--- a/src/changelog.html
+++ b/src/changelog.html
@@ -27,6 +27,13 @@
 				<li> [FIX] 含括号课程名显示bug, ISSUE 4 </li>
 				<li> [FIX] 未读信息数量显示bug </li>
 			</ul>
+			<li> 2.2 </li>
+			<ul>
+				<li> [FIX] 查看批阅打开Target错误</li>
+				<li> [FIX] 简化显示逻辑，合并函数 </li>
+				<li> [FIX] 未完成作业算上已过期错误 </li>
+				<li> [ADD] 增加作业计数上传 </li>
+			</ul>
 		</div>
 		<a class="back-link" href="welcome.html">返回</a>
 	</div>
