update changelog\version package 2.2.1

--- a/src/changelog.html
+++ b/src/changelog.html
@@ -34,6 +34,10 @@
 				<li> [FIX] 未完成作业算上已过期错误 </li>
 				<li> [ADD] 增加作业计数上传 </li>
 			</ul>
+			<li> 2.2.1 </li>
+			<ul>
+				<li> [FIX] 合并函数时遗留的作业已读无效bug </li>
+			</ul>
 		</div>
 		<a class="back-link" href="welcome.html">返回</a>
 	</div>
