--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,9 @@
 		<script src="js/menu.js"></script>
 		<script src="js/utils.js"></script>
 		<script src="ulti.js"></script>
+		<script language="javascript" type="text/javascript" src="const.js"> </script>
 		<script src="js/sjcl.js"></script>
-		<script language="javascript" type="text/javascript" src="total.js"> </script>
+		<script language="javascript" type="text/javascript" src="view.js"> </script>
 		<script language="javascript" type="text/javascript" src="index.js"> </script>
 	</head>
 	<body>
