try to use grunt

--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,9 @@
 		<script src="js/loading.js"></script>
 		<script src="js/menu.js"></script>
 		<script src="js/utils.js"></script>
-		<script src="ulti.js"></script>
-		<script language="javascript" type="text/javascript" src="const.js"> </script>
+		<script language="javascript" type="text/javascript" src="js/coffee/const.js"> </script>
 		<script src="js/sjcl.js"></script>
-		<script language="javascript" type="text/javascript" src="view.js"> </script>
-		<script language="javascript" type="text/javascript" src="index.js"> </script>
+		<script language="javascript" type="text/javascript" src="js/coffee/view.js"> </script>
 	</head>
 	<body>
 		<div class="pane-folder">
