homework dig and display is done

--- a/src/subframe.html
+++ b/src/subframe.html
@@ -11,12 +11,40 @@
 		<script language="javascript" type="text/javascript" src="js/coffee/detail.js"> </script>
 	</head>
 	<body>
-		<div class="page-warp">
-				<div class="courseName"></div>
-				<h1 class="title"></h1>
-				<div class="author"></div>
-				<div class="content"></div>
-				<div class="date"></div>
+		<div class="page-wrap">
+			<div class="loading">
+				载入中...请稍后
+			</div>
+			<div class="noti-wrap">
+					<div class="courseName"></div>
+					<h1 class="title"></h1>
+					<div class="description">
+						<div class="meta">
+							发布者：
+							<span class="author"></span>
+						</div>
+						<div class="meta">
+							时间：
+							<span class="date"></span>
+						</div>
+					</div>
+					<div class="content"></div>
+			</div>
+			<div class="ddl-wrap">
+					<div class="courseName"></div>
+					<h1 class="title"></h1>
+					<div class="description">
+						<div class="meta">
+							时间：
+							<span class="date"></span>
+						</div>
+					</div>
+					<div class="content"></div>
+					<div class="uploadAttach"></div>
+					<div class="uploadText"></div>
+
+					<div class="attach"></div>
+			</div>
 		</div>
 
 	</body>
