changelog, detail page...

--- a/src/changelog.html
+++ b/src/changelog.html
@@ -38,6 +38,14 @@
 			<ul>
 				<li> [FIX] 合并函数时遗留的作业已读无效bug </li>
 			</ul>
+			<li> 2.3 </li>
+			<ul>
+				<li> [ADD] 增加对公告页面的格式修正，保证换行能正常显示 </li>
+				<li> [ADD] 逻辑前后台拆分，提高性能 </li>
+				<li> [FIX] 若干点击之后的显示更新问题 </li>
+				<li> [ADD] 长时间未使用后，自动登录功能（无需刷新） </li>
+				<li> [ADD] 5分钟内重复进入系统，不进行刷新（减轻服务器压力） </li>
+				<li> [ADD] 通知、作业的离线缓存功能 </li>
 		</div>
 		<a class="back-link" href="welcome.html">返回</a>
 	</div>
