--- a/src/about.html
+++ b/src/about.html
@@ -19,6 +19,9 @@
             <li> 贵系老师：繁多的作业催生了这个插件的产生 </li>
             <li> Bootstrap &amp; FontAwesome：清新漂亮的界面 </li>
             <li> JQuery库：减轻了操作DOM的工作复杂度 </li>
+			<li> Iced Coffee Script 的开发者：让代码清新了不少</li>
+			<li> Chrome 复杂的信息传递机制：写死我了- - </li>
+			<li> 网络学堂的维护者：感谢你们新增了服务器，加快了服务速度 </li>
             <li> Github：管理代码 </li>
           </ul>
         </p>
