--- a/src/subframe.html
+++ b/src/subframe.html
@@ -35,7 +35,7 @@
 	  </div>
 
 			<div class="noti-wrap">
-					<pre class="content"></pre>
+					<div class="content"></div>
 			</div>
 			<div class="ddl-wrap">
 					<pre class="content"></pre>
@@ -44,6 +44,8 @@
 			<hr />
 			<div>已提交文件：<span class="uploadAttach"></span></div>
 			<div>已提交文本：<pre class="uploadText"></pre></div>
+			<hr />
+			<div class="help">如果遇到链接失效（教师更新文件），请点击右上角刷新图标进行刷新</div>
 		</div>
 	</div>
 
