fix tab of files

--- a/src/changelog.html
+++ b/src/changelog.html
@@ -46,6 +46,11 @@
 				<li> [ADD] 长时间未使用后，自动登录功能（无需刷新） </li>
 				<li> [ADD] 5分钟内重复进入系统，不进行刷新（减轻服务器压力） </li>
 				<li> [ADD] 通知、作业的离线缓存功能 </li>
+			</ul>
+			<li> 3.0.1 </li>
+			<ul> 
+				<li> [FIX] 修复网络学堂官方修复标签所带来的副作用，使标签背景有效 </li>
+			</ul>
 		</div>
 		<a class="back-link" href="welcome.html">返回</a>
 	</div>
