detect term string automatically, give user options for change to new term

--- a/src/index.html
+++ b/src/index.html
@@ -140,6 +140,19 @@
 			<br /><br />
 			<button id="net-error-reload-btn" class="btn">刷新页面 </button>
 			<button id="net-error-offline-btn" class="btn">离线使用 </button>
-		</body>
-	</html>
+		</div>
+		<div id="new-term-modal" style="text-align:center;">
+			当前使用的学期是
+			<span class="red" id="lastTerm"></span>，<br />
+			检测到当前学期为
+			<span class="red" id="currentTerm"></span>
+			，是否切换？
+			<br /><br />
+			<button id="new-term-switch-btn" class="btn">切换到新学期</button>
+			<button id="new-term-cancel-btn" class="btn">下次再说</button>
+			<br />
+			<a id="new-term-force">当前课程正确，不再提醒</a>
+		</div>
+	</body>
+</html>
 
