--- a/src/changelog.html
+++ b/src/changelog.html
@@ -9,17 +9,17 @@
       <div class="text-block">
         <h1> Changelog </h1>
 		<ul>
-			<li>2.0:</li>
+			<li>2.0</li>
 			<ul>
 				<li> 新版本推出</li>
 			</ul>
-			<li>2.0.1:</li>
+			<li>2.0.1</li>
 			<ul>
 				<li> [FIX] 修复了更换用户后「刷新」无用，必须「强制刷新」然后再「刷新」方能生效的问题</li>
 				<li> [FIX] 修复了localStroage的安全性问题</li>
 				<li> [ADD] Version 信息 </li>
 			</ul>
-			<li> 2.1: </li>
+			<li> 2.1 </li>
 			<ul>
 				<li> [ADD] 查找课程文件功能 </li>
 				<li> [FIX] 添加数据库升级函数 </li>
@@ -50,6 +50,11 @@
 			<li> 3.0.1 </li>
 			<ul> 
 				<li> [FIX] 修复网络学堂官方修复标签所带来的副作用，使标签背景有效 </li>
+			</ul>
+			<li> 3.1 </li>
+			<ul> 
+				<li> [FIX] 修复清空数据时不清空课程列表问题 </li>
+				<li> [ADD] 自动判断学期切换 </li>
 			</ul>
 		</div>
 		<a class="back-link" href="welcome.html">返回</a>
