change version to 3.2 and add changelog

--- a/src/changelog.html
+++ b/src/changelog.html
@@ -56,6 +56,11 @@
 				<li> [FIX] 修复清空数据时不清空课程列表问题 </li>
 				<li> [ADD] 自动判断学期切换 </li>
 			</ul>
+			<li> 3.2 </li>
+			<ul>
+				<li> [FIX] 修复首次打开时显示学期切换窗口 </li>
+				<li> [FIX] 简化前后台交互及弹出方式 </li>
+			</ul>
 		</div>
 		<a class="back-link" href="welcome.html">返回</a>
 	</div>
