--- a/src/changelog.html
+++ b/src/changelog.html
@@ -61,6 +61,10 @@
 				<li> [FIX] 修复首次打开时显示学期切换窗口 </li>
 				<li> [FIX] 简化前后台交互及弹出方式 </li>
 			</ul>
+			<li> 3.2.1 </li>
+			<ul>
+				<li> [ADD] 迁移到Chrome商店 </li>
+			</ul>
 		</div>
 		<a class="back-link" href="welcome.html">返回</a>
 	</div>
