--- a/src/changelog.html
+++ b/src/changelog.html
@@ -60,10 +60,11 @@
 			<ul>
 				<li> [FIX] 修复首次打开时显示学期切换窗口 </li>
 				<li> [FIX] 简化前后台交互及弹出方式 </li>
+				<li> [ADD] 整体迁移至Chrome Web Store，升级地址修改 </li>
 			</ul>
-			<li> 3.2.1 </li>
+			<li> 3.2.2 </li>
 			<ul>
-				<li> [ADD] 迁移到Chrome商店 </li>
+				<li> [ADD] 迁移到Chrome商店，添加安装检测代码 </li>
 			</ul>
 		</div>
 		<a class="back-link" href="welcome.html">返回</a>
