update to version 3.2.3

--- a/src/changelog.html
+++ b/src/changelog.html
@@ -66,6 +66,10 @@
 			<ul>
 				<li> [ADD] 迁移到Chrome商店，添加安装检测代码 </li>
 			</ul>
+			<li> 3.2.3 </li>
+			<ul>
+				<li> [FIX] 修复强制刷新后重复显示item </li>
+			</ul>
 		</div>
 		<a class="back-link" href="welcome.html">返回</a>
 	</div>
