--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,12 @@
 					<span class="unread-count" id="unread-file">-</span>
 				</a>
 				</li>
+				<li class="folder" id="switch-discuss-page">
+				<a href="#">
+					<i class="icon-bullhorn"></i> 所有讨论
+					<span class="unread-count" id="unread-discuss">-</span>
+				</a>
+				</li>
 			</ul>
 
 
@@ -98,6 +104,12 @@
 			<div id="file-page">
 				<div class="category-heading">全部文件</div>
 				<ol id="file-heading" class="message-list">
+					<li class="message-loading">Loading...</li>
+				</ol>
+			</div>
+			<div id="discuss-page">
+				<div class="category-heading">全部讨论</div>
+				<ol id="recent-discuss" class="message-list">
 					<li class="message-loading">Loading...</li>
 				</ol>
 			</div>
