--- a/src/html/changelog.html
+++ b/src/html/changelog.html
@@ -80,6 +80,10 @@
 			<ul>
 				<li> [FIX] 讨论区无法回复 </li>
 			</ul>
+			<li> 3.4.0 </li>
+			<ul>
+				<li> [FIX] 移除新版学堂课程，保证旧版可以正常使用 </li>
+			</ul>
 		</div>
 		<a class="back-link" href="welcome.html">返回</a>
 	</div>
