--- a/src/html/changelog.html
+++ b/src/html/changelog.html
@@ -84,6 +84,10 @@
 			<ul>
 				<li> [FIX] 移除新版学堂课程，保证旧版可以正常使用 </li>
 			</ul>
+			<li> 3.5.0 </li>
+			<ul>
+				<li> [ADD] 初步支持新版网络学堂，由于没有新网络学堂的课程，作业提交未测试 </li>
+			</ul>
 		</div>
 		<a class="back-link" href="welcome.html">返回</a>
 	</div>
