--- a/src/html/changelog.html
+++ b/src/html/changelog.html
@@ -86,7 +86,7 @@
 			</ul>
 			<li> 3.5.0 </li>
 			<ul>
-				<li> [ADD] 初步支持新版网络学堂，由于没有新网络学堂的课程，作业提交未测试 </li>
+				<li> [ADD] 初步支持新版网络学堂(by moreD) </li>
 			</ul>
 		</div>
 		<a class="back-link" href="welcome.html">返回</a>
