--- a/src/html/about.html
+++ b/src/html/about.html
@@ -15,7 +15,7 @@
 		<p> Github源代码 : <a href="https://github.com/xxr3376/Learn-Project">https://github.com/xxr3376/Learn-Project</a></p>
         <p> 致谢：
           <ul>
-            <li> moreD：不愿意透露姓名的贵系学弟：），支持了新版网络学堂 </li>
+            <li> yaoht、moreD等多位在Github上贡献代码的同学，对新版网络学堂修复和支持 </li>
             <li> 李百恩：无敌的技术支持以及最好的美工 </li>
             <li> 贵系老师：繁多的作业催生了这个插件的产生 </li>
             <li> Bootstrap &amp; FontAwesome：清新漂亮的界面 </li>
