--- a/src/html/changelog.html
+++ b/src/html/changelog.html
@@ -88,6 +88,10 @@
 			<ul>
 				<li> [ADD] 初步支持新版网络学堂(by moreD) </li>
 			</ul>
+			<li> 3.5.2 </li>
+			<ul>
+				<li> [FIX] 新版网络学堂登陆问题(by yaoht) </li>
+			</ul>
 		</div>
 		<a class="back-link" href="welcome.html">返回</a>
 	</div>
