[ADD] 可以折叠侧边栏以适应低分辨率屏幕

--- a/src/html/changelog.html
+++ b/src/html/changelog.html
@@ -92,6 +92,10 @@
 			<ul>
 				<li> [FIX] 新版网络学堂登陆问题(by yaoht) </li>
 			</ul>
+			<li> 3.5.3 </li>
+			<ul>
+				<li> [ADD] 可以折叠侧边栏以适应低分辨率屏幕(by yaoht) </li>
+			</ul>
 		</div>
 		<a class="back-link" href="welcome.html">返回</a>
 	</div>
