refactor: webpack -> vite & full MV3 support

--- a/src/welcome.html
+++ b/src/welcome.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <link rel="stylesheet" type="text/css" href="css/welcome.css" />
-  <link rel="stylesheet" type="text/css" href="css/scrollbar.css" />
+  <link rel="stylesheet" type="text/css" href="./css/welcome.css" />
+  <link rel="stylesheet" type="text/css" href="./css/scrollbar.css" />
   <title>欢迎使用</title>
 </head>
 
@@ -12,14 +12,16 @@
   <main id="wrapper">
     <section id="content">
       <section id="banner">
-        <img src="image/bg.png" />
+        <img src="./image/bg.png" />
       </section>
       <section id="menu">
         <a href="readme.html">使用手册</a> |
         <a href="about.html#about-us">关于我们</a> |
         <a href="changelog.html">更新记录</a> <br />
-        <a href="https://chrome.google.com/webstore/detail/learn-helper/mdehapphdlihjjgkhmoiknmnhcjpjall?hl=zh-CN" target="_blank">Chrome Store</a> |
-        <a href="https://microsoftedge.microsoft.com/addons/detail/dhddjfhadejlhiaafnbadhaeichbkgil" target="_blank">Edge Addons</a> |
+        <a href="https://chrome.google.com/webstore/detail/learn-helper/mdehapphdlihjjgkhmoiknmnhcjpjall?hl=zh-CN"
+          target="_blank">Chrome Store</a> |
+        <a href="https://microsoftedge.microsoft.com/addons/detail/dhddjfhadejlhiaafnbadhaeichbkgil"
+          target="_blank">Edge Addons</a> |
         <a href="https://harrychen.xyz/learn/" target="_blank">FireFox / 开发版</a>
         <div id="version"></div>
         <div id="packages"></div>
@@ -32,7 +34,7 @@
       </p>
     </footer>
   </main>
-  <script src="welcome.js"></script>
+  <script type="module" src="./welcome.ts"></script>
 </body>
 
 </html>
