--- a/src/changelog.html
+++ b/src/changelog.html
@@ -3,8 +3,8 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<link rel="stylesheet" type="text/css" href="css/doc.css" />
-	<link rel="stylesheet" type="text/css" href="css/scrollbar.css" />
+	<link rel="stylesheet" type="text/css" href="./css/doc.css" />
+	<link rel="stylesheet" type="text/css" href="./css/scrollbar.css" />
 	<title>更新记录</title>
 </head>
 
