Use terser to minify, add build:dev command, auto pack zip file on build
Signed-off-by: Harry Chen <harry-chen@outlook.com>

--- a/pages/about.html
+++ b/pages/about.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="main"></div>
-    <script type="module" src="./src/about.tsx"></script>
+    <script type="module" src="../src/about.tsx"></script>
   </body>
 </html>
