--- a/entrypoints/index.html
+++ b/entrypoints/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="main"></div>
+    <script type="module" src="../src/init.ts"></script>
     <script type="module" src="../src/main.tsx"></script>
   </body>
 </html>
